Moving init script to its own file

--- a/html/index.html
+++ b/html/index.html
@@ -14,47 +14,9 @@
 	<script language="Javascript" src="framework/jsGFwkPath.js"></script>
 	<script language="Javascript" src="framework/jsGFwkTimers.js"></script>
 	<script language="Javascript" src="framework/jsGFwkJukebox.js"></script>
-	
+	<script src="init.js"></script>
 	<body style="border:0px; margin:0px;
 		padding:0px; background-color: black;">
 		<canvas width="640" height="480" id="canvas"></canvas>
 	</body>
 </html>
-<script>
-	jsGFwk.settings.canvas = "canvas";
-	jsGFwk.settings.clearColor = "rgb(50, 50, 50)";
-	jsGFwk.settings.frameRate = 1000 / 60;
-	
-	jsGFwk.include("FastAnimation");
-	jsGFwk.include("Container");
-	jsGFwk.include("IO");
-	jsGFwk.include("Collisions");
-	jsGFwk.include("ResourceManager");
-	jsGFwk.include("Sprites");
-	jsGFwk.include("Fonts");
-	jsGFwk.include("Scenes");
-	jsGFwk.include("Path");
-	
-	jsGFwk.Fonts.createFont({ name: 'zxBold', source: 'fonts/zxBold.ttf' });
-		
-	jsGFwk.createObject({
-		id: "progress",
-		visible: true,
-		barWidth: 0,
-		init: function() {
-			jsGFwk.ResourceManager.onResourcesLoadedCompleted = function() {
-				
-				//jsGFwk._gameObjects.progress.destroy();
-			};
-		},
-		update: function(delta) { },
-		draw: function (context) { 
-			context.save();
-				context.fillStyle = "white";
-				context.fillText("Connecting..." + parseInt((jsGFwk.ResourceManager._totalLoadedResources * 100) / jsGFwk.ResourceManager._totalResources) + "%",30, 40);
-			context.restore();
-		}
-	});
-	
-	jsGFwk.start();
-</script>
