--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 	<script language="Javascript" src="framework/jsGFwkPath.js"></script>
 	<script language="Javascript" src="framework/jsGFwkTimers.js"></script>
 	<script language="Javascript" src="framework/jsGFwkJukebox.js"></script>
-	<script src="init.js"></script>
+	<script src="scripts/init.js"></script>
 	<body style="border:0px; margin:0px;
 		padding:0px; background-color: pink;">
 		<canvas width="640" height="480" id="canvas"></canvas>
