--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
 	<script language="Javascript" src="framework/jsGFwkPath.js"></script>
 	<script language="Javascript" src="framework/jsGFwkTimers.js"></script>
 	<script language="Javascript" src="framework/jsGFwkJukebox.js"></script>
+    <script language="Javascript" src="scripts/bagofcats.js"></script>
     <script language="Javascript" src="scripts/player.js"></script>
 	<script src="scripts/init.js"></script>
 	<body style="border:0px; margin:0px;
