--- a/html/index.html
+++ b/html/index.html
@@ -14,9 +14,14 @@
 	<script language="Javascript" src="framework/jsGFwkPath.js"></script>
 	<script language="Javascript" src="framework/jsGFwkTimers.js"></script>
 	<script language="Javascript" src="framework/jsGFwkJukebox.js"></script>
+	
     <script language="Javascript" src="scripts/bagofcats.js"></script>
+	<script language="Javascript" src="scripts/background.js"></script>
+	<script language="Javascript" src="scripts/hud.js"></script>
+	<script language="Javascript" src="scripts/playerController.js"></script>
     <script language="Javascript" src="scripts/player.js"></script>
 	<script src="scripts/init.js"></script>
+	
 	<body style="border:0px; margin:0px;
 		padding:0px; background-color: pink;">
 		<canvas width="640" height="480" id="canvas"></canvas>
