--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,8 @@
 	<script language="Javascript" src="framework/jsGFwkTimers.js"></script>
 	<script language="Javascript" src="framework/jsGFwkJukebox.js"></script>
 	
+	<script language="Javascript" src="scripts/particle.js"></script>
+	
     <script language="Javascript" src="scripts/bagofcats.js"></script>
 	<script language="Javascript" src="scripts/background.js"></script>
 	<script language="Javascript" src="scripts/hud.js"></script>
