--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
 	<script src="scripts/init.js"></script>
 	
 	<body style="border:0px; margin:0px;
-		padding:0px; background-color: pink;">
+		padding:0px; background-color: black;">
 		<canvas width="640" height="480" id="canvas"></canvas>
 	</body>
 </html>
