--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
 	<script language="Javascript" src="scripts/particle.js"></script>
 	
     <script language="Javascript" src="scripts/bagofcats.js"></script>
+	<script language="Javascript" src="scripts/soap.js"></script>
 	<script language="Javascript" src="scripts/background.js"></script>
 	<script language="Javascript" src="scripts/hud.js"></script>
 	<script language="Javascript" src="scripts/playerController.js"></script>
