--- a/html/index.html
+++ b/html/index.html
@@ -16,8 +16,8 @@
 	<script language="Javascript" src="framework/jsGFwkJukebox.js"></script>
 	
 	<script language="Javascript" src="scripts/particle.js"></script>
-	
-    <script language="Javascript" src="scripts/bagofcats.js"></script>
+	<script language="Javascript" src="scripts/util.js"></script>
+	<script language="Javascript" src="scripts/bagofcats.js"></script>
 	<script language="Javascript" src="scripts/soap.js"></script>
 	<script language="Javascript" src="scripts/background.js"></script>
 	<script language="Javascript" src="scripts/hud.js"></script>
