--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,8 @@
 	<script language="Javascript" src="scripts/background.js"></script>
 	<script language="Javascript" src="scripts/hud.js"></script>
 	<script language="Javascript" src="scripts/playerController.js"></script>
-    <script language="Javascript" src="scripts/player.js"></script>
+	<script language="Javascript" src="scripts/playerController.js"></script>
+	<script language="Javascript" src="scripts/player.js"></script>
 	<script src="scripts/init.js"></script>
 	
 	<body style="border:0px; margin:0px;
