--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
 	<script language="Javascript" src="scripts/soap.js"></script>
 	<script language="Javascript" src="scripts/background.js"></script>
 	<script language="Javascript" src="scripts/hud.js"></script>
-	<script language="Javascript" src="scripts/playerController.js"></script>
+	<script language="Javascript" src="scripts/button.js"></script>
 	<script language="Javascript" src="scripts/playerController.js"></script>
 	<script language="Javascript" src="scripts/player.js"></script>
 	<script src="scripts/init.js"></script>
