--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 	<script language="Javascript" src="framework/jsGFwkPath.js"></script>
 	<script language="Javascript" src="framework/jsGFwkTimers.js"></script>
 	<script language="Javascript" src="framework/jsGFwkJukebox.js"></script>
-	
+	<script language="Javascript" src="scripts/game-over-screen.js"></script>
 	<script language="Javascript" src="scripts/particle.js"></script>
 	<script language="Javascript" src="scripts/util.js"></script>
 	<script language="Javascript" src="scripts/bagofcats.js"></script>
