--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
 	<script language="Javascript" src="framework/jsGFwkEffects.js"></script>
 	<script language="Javascript" src="scripts/game-over-screen.js"></script>
 	<script language="Javascript" src="scripts/particle.js"></script>
+	<script language="Javascript" src="scripts/introAnim.js"></script>
 	<script language="Javascript" src="scripts/util.js"></script>
 	<script language="Javascript" src="scripts/bagofcats.js"></script>
 	<script language="Javascript" src="scripts/soap.js"></script>
