--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,7 @@
 	<script language="Javascript" src="framework/jsGFwkTimers.js"></script>
 	<script language="Javascript" src="framework/jsGFwkJukebox.js"></script>
 	<script language="Javascript" src="framework/jsGFwkEffects.js"></script>
+	<script language="Javascript" src="framework/alarm.js"></script>
 	<script language="Javascript" src="scripts/game-over-screen.js"></script>
 	<script language="Javascript" src="scripts/particle.js"></script>
 	<script language="Javascript" src="scripts/player-head.js"></script>
